--- a/src/App.css
+++ b/src/App.css
@@ -14,3 +14,9 @@
     right: 0;
     margin-top: 8rem;
 }
+.reviewInput {
+    width: 100%;
+    height: 3rem; 
+    padding: 20px; 
+    font-size: 26px;
+}
